--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,4 @@
-/*==========Header==========*/
+/*==========Header=====================================================================================*/
 
 #header {
     background-color: var() ;
@@ -22,7 +22,7 @@
     justify-content: space-between;
 }
 
-/*==========Home==========*/
+/*==========Home=====================================================================================*/
 
 .home {
     background: linear-gradient(131.58deg, #00138E 6%, #1CADFF 67.14%, #1BE0E2 97.71%);
@@ -39,7 +39,7 @@
     color: var(--cor-texto);
 }
 
-/*==========Sobre Nós==========*/
+/*==========Sobre Nós=====================================================================================*/
 
 .Sobre {
     background: white;
@@ -67,7 +67,7 @@
     padding: 0 12rem;
 }
 
-/*==========Conteudo==========*/
+/*==========Conteudo===========================================================================*/
 
 .Conteudo {
     background: linear-gradient(310.37deg, #00138E 10.43%, #1CADFF 68.35%, #1BE0E2 97.31%);
@@ -95,7 +95,7 @@
     
 }
 
-/*==========Nossa Meta==========*/
+/*==========Nossa Meta=====================================================================================*/
 
 .Meta {
     background-color: white;
@@ -123,7 +123,7 @@
     padding: 0 12rem;
 }
 
-/*==========Contato==========*/
+/*==========Contato=====================================================================================*/
 
 .Contato {
     background: linear-gradient(131.58deg, #00138E 6%, #1CADFF 67.14%, #1BE0E2 97.71%);
@@ -151,7 +151,7 @@
     font-size: 26px;
 }
 
-/*==========Baseboard==========*/
+/*==========Baseboard=====================================================================================*/
 
 footer {
     background: #001623;
