--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,7 @@
 
 #header {
     background-color: var() ;
-    padding: 1rem;
+    padding: 1rem 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,7 +13,7 @@
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .imgheader {
@@ -117,7 +117,7 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-
+    margin-bottom: 2rem;
 }
 
 .caixa {
@@ -139,6 +139,17 @@
 .caixa img {
     border-radius: 7px;
 }
+
+.bot1 {
+    border: 2px solid white;
+    border-radius: 15px;
+    padding: .5rem 1rem;
+}
+
+.bot1 a {
+    font-size: 26px;
+    color: white;
+}
 /*==========Nossa Meta=====================================================================================*/
 
 #Meta {
@@ -151,9 +162,17 @@
     font-weight: 700;
 }
 
-.Meta h1 {
+.Metainf {
+    width: 80%;
+    display: flex;
     align-items: center;
-    text-align: center;
+    justify-content: space-between;
+
+}
+
+.Meta h1 {
+    align-items: left;
+    text-align: left;
     font-weight: 700;
     color: var(--cor-principal);
     padding: 0;
@@ -161,17 +180,16 @@
 }
 
 .Meta p {
-    align-items: center;
-    text-align: center;
+    align-items: left;
+    text-align: left;
     font-weight: 400;
-    padding: 0 12rem;
+    padding: 0rem;
 }
 
 .imgmeta {
     display: flex;
     justify-content: end;
     width: 45%;
-    margin-right: 6rem;
 }
 
 /*==========Contato=====================================================================================*/
@@ -191,7 +209,7 @@
     font-weight: 700;
     color: var(--fundo-principal);
     margin: 0;
-    font-size: 36px;
+    font-size: 40px;
 }
 
 .Contato p {
