--- a/style/style.css
+++ b/style/style.css
@@ -224,24 +224,29 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    margin-bottom: 14px;
 }
 
 .botnome {
     border: 2px solid white;
     border-radius: 15px;
-    padding: .5rem 1rem;
+    padding: .5rem;
+    margin-right: 7px;
+    width: 50%;
 }
 
 .botemail {
     border: 2px solid white;
     border-radius: 15px;
-    padding: .5rem 1rem;
+    padding: .5rem;
+    margin-left: 7px;
+    width: 50%;
 }
    
 .botmsg {
     border: 2px solid white;
     border-radius: 15px;
-    padding: .5rem 1rem;
+    padding: 5rem 1rem;
 }
 
 /*==========Baseboard=====================================================================================*/
