--- a/style/style.css
+++ b/style/style.css
@@ -221,33 +221,36 @@
 
 .NomeeEmail {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    justify-content: row;
     align-items: center;
-    margin-bottom: 14px;
+    justify-content: center;
+    width:  100%;
+    gap: 8rem;
+    margin-bottom: 1rem;
 }
 
-.botnome {
-    border: 2px solid white;
-    border-radius: 15px;
-    padding: .5rem;
-    margin-right: 7px;
-    width: 50%;
+.Contatoinf .botnome, .botemail {
+    width: 100%;
+    padding: 1rem;
+    background-color: #ffffff;
+    border: none;
+    border-radius: 20px;
 }
 
-.botemail {
-    border: 2px solid white;
-    border-radius: 15px;
-    padding: .5rem;
-    margin-left: 7px;
-    width: 50%;
+.Contatoinf .botmsg {
+    align-items: center;
+    width: 100%;
+    padding: 5rem 0;
+    background-color: #ffffff;
+    border: none;
+    border-radius: 20px;
 }
-   
-.botmsg {
-    border: 2px solid white;
-    border-radius: 15px;
-    padding: 5rem 1rem;
+
+.Contatoinf .botnome:last-child {
+    margin-left: 0rem;
 }
+
+
 
 /*==========Baseboard=====================================================================================*/
 
