--- a/style/style.css
+++ b/style/style.css
@@ -31,16 +31,31 @@
 
 /*==========Home=====================================================================================*/
 
-.home {
+#home {
     background: linear-gradient(131.58deg, #00138E 6%, #1CADFF 67.14%, #1BE0E2 97.71%);
     display: flex;
     justify-content: center;
+    border-radius: 0 0 300px 0;
+}
+
+.bghome {
+    background-image: url(/image/bg.svg);
+    background-position: bottom right;
+    width: 100%;
+    background-repeat: no-repeat;
+    border-radius: 0 0 300px 0;
+}
+
+
+
+.home {
     padding: 10rem 0rem;
+    width: 80%;
 }
 
 .home p {
-    align-items: center;
-    text-align: center;
+    align-items: left;
+    text-align: left;
     font-size: 36px;
     font-weight: 700;
     color: var(--cor-texto);
@@ -128,12 +143,12 @@
     border-radius: 10px;
 }
 
-.caixa:last-child {
+.caixa:nth-child(3) {
     margin-right: 0rem;
 }
 
 .caixa p {
-    padding:0 3rem;
+    padding:0 1rem;
 }
 
 .caixa img {
@@ -142,8 +157,8 @@
 
 .botmais {
     border: 2px solid white;
-    border-radius: 15px;
-    padding: .5rem 1rem;
+    border-radius: 13px;
+    padding: .3rem 1.5rem;
 }
 
 .botmais a {
