--- a/style/style.css
+++ b/style/style.css
@@ -31,19 +31,29 @@
 
 /*==========Home=====================================================================================*/
 
+
+
 #home {
     background: linear-gradient(131.58deg, #00138E 6%, #1CADFF 67.14%, #1BE0E2 97.71%);
     display: flex;
+    flex-direction: row;
     justify-content: center;
     border-radius: 0 0 300px 0;
+    overflow: hidden;
+
 }
 
 .bghome {
-    background-image: url(/image/bg.svg);
-    background-position: bottom right;
+    display: flex;
+    flex-direction: row;
+    width: 95%;
+    height: 100%;  
+}
+
+
+.home img {
     width: 100%;
-    background-repeat: no-repeat;
-    border-radius: 0 0 300px 0;
+    height: 100%;
 }
 
 
@@ -212,9 +222,12 @@
 #Contato {
     background: linear-gradient(131.58deg, #00138E 6%, #1CADFF 67.14%, #1BE0E2 97.71%);   
     display: flex;
+    flex-direction: row;
     justify-content: center;
     text-align: center;
     padding: 10rem 0rem;   
+    border-radius: 0 0 0 300px;
+    overflow: hidden;
 }
 
 .Contato h1 {
@@ -241,6 +254,13 @@
     margin-bottom: 1rem;
 }
 
+.contatoinf {
+    display: flex;
+    flex-direction: row;
+    width: 95%;
+    height: 100%;
+}
+
 .Contatoinf .botnome, .botemail {
     padding: 1rem;
     background-color: #ffffff;
@@ -262,6 +282,10 @@
     margin-left: 0rem;
 }
 
+.contatoinf img {
+    width: 100%;
+    height: 100%;
+}
 
 
 /*==========Baseboard=====================================================================================*/
